--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -445,106 +445,122 @@
             margin-top: -2px;
             cursor: pointer;
         }
-        .advanced_mode_faq{
-            .kr-sg-toggle {
-                position: relative;
-                display: inline-block;
-                margin-left: -108px;
-                width: 30px;
-                height: 16px;
-                input{
-                    opacity: 0;
-                    width: 0;
-                    height: 0;
-                    &:checked{
-                        + .slider{
-                            border: 1px solid #0D6EFD;
-                            background: #0D6EFD;
-                            &::before{
-                                -webkit-transform: translateX(13px);
-                                -ms-transform: translateX(13px);
-                                transform: translateX(13px);
-                                background-color: #fff;
-                            }
-                            span{
-                                &.yes{
-                                    color: #161620;
-                                }  
-                                &.no{                                                        
-                                    color: #9AA0A6;                                    
-                                }                                                          
-                            }
-                            span{
-                                &.enabled{
-                                    color: $primaryColor;
-                                    display: block;
-                                }  
-                                &.disabled{
-                                    display: none;
-                                }                                                          
-                            }                
-                        }
-                        &:disabled{
-                            + .slider{
-                                background-color: $hoverColor;
-                                opacity: 0.3;
-                                box-shadow: 0 0 1px $hoverColor;
-                            }
-                        }
-                    }
-                    &:focus{
-                        + .slider{                
-                            // box-shadow: 0 0 1px $hoverColor;
-                            border: 1px solid #0D6EFD;
-                        }
-                    }   
-                    &:disabled{
-                        cursor: auto;            
-                    }   
-                }
-                .slider{
-                    position: absolute;
-                    cursor: pointer;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    -webkit-transition: .4s;
-                    transition: .4s;
-                    border-radius: 18px;
-                    border: 1px solid #BDC1C6;
-                    background: #fff;
-                    span{
-                        &.no{                           
-                            font-size: 12px;
-                            margin-left: -55px;
-                            color: #161620;                            
-                        }
-                        &.yes{                                                        
-                            color: #9AA0A6;
-                            padding-left: 40px;
-                            font-size: 12px;
-                        }
-                    }
-                    &::before{
-                        position: absolute;
-                        content: "";
-                        height: 12px;
-                        top: 1px;
-                        width: 12px;
-                        left: 2px;
-                        right: 0;
-                        background-color: #BDC1C6;
-                        transition: 0.4s;
-                        border-radius: 50%;
-                    }
-                }
-            }           
-        }    
+           
     }
 }
-
-
+.deleteResponseDiv{
+    position: relative;
+    float: right;
+    color: red;
+}
+.advanced_mode_faq{
+    position: relative;
+    float: right;
+    .kr-sg-toggle {
+        position: relative;
+        display: inline-block;
+        margin-left: -200px;
+        width: 30px;
+        height: 16px;
+        input{
+            opacity: 0;
+            width: 0;
+            height: 0;
+            &:checked{
+                + .slider{
+                    border: 1px solid #0D6EFD;
+                    background: #0D6EFD;
+                    &::before{
+                        -webkit-transform: translateX(13px);
+                        -ms-transform: translateX(13px);
+                        transform: translateX(13px);
+                        background-color: #fff;
+                    }
+                    span{
+                        &.yes{
+                            color: #161620;
+                        }  
+                        &.no{                                                        
+                            color: #9AA0A6;                                    
+                        }                                                          
+                    }
+                    span{
+                        &.enabled{
+                            color: $primaryColor;
+                            display: block;
+                        }  
+                        &.disabled{
+                            display: none;
+                        }                                                          
+                    }                
+                }
+                &:disabled{
+                    + .slider{
+                        background-color: $hoverColor;
+                        opacity: 0.3;
+                        box-shadow: 0 0 1px $hoverColor;
+                    }
+                }
+            }
+            &:focus{
+                + .slider{                
+                    // box-shadow: 0 0 1px $hoverColor;
+                    border: 1px solid #0D6EFD;
+                }
+            }   
+            &:disabled{
+                cursor: auto;            
+            }   
+        }
+        .slider{
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 18px;
+            border: 1px solid #BDC1C6;
+            background: #fff;
+            span{
+                &.no{                           
+                    font-size: 12px;
+                    margin-left: -65px;
+                    color: #161620;                            
+                }
+                &.yes{                                                        
+                    color: #9AA0A6;
+                    padding-left: 40px;
+                    font-size: 12px;
+                }
+            }
+            &::before{
+                position: absolute;
+                content: "";
+                height: 12px;
+                top: 1px;
+                width: 12px;
+                left: 2px;
+                right: 0;
+                background-color: #BDC1C6;
+                transition: 0.4s;
+                border-radius: 50%;
+            }
+        }
+    }           
+} 
+.imageUrlAdded{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 334px;
+    display: inline-block;
+    padding-top: 18p;
+    height: 25px;
+    vertical-align: middle;
+}
 .mb-15{
     margin-bottom: 15px;
 }
