--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -544,7 +544,7 @@
   <div class="modal-footer">
       <button class="kr-sg-button-primary btn_lg" (click)="faqUpdateEvent()">Save</button>
       <button class="kr-sg-button-secondary btn_lg" (click)="faqCancle()">Cancel</button>
-      <button class="kr-sg-button-secondary btn-danger float-right" (click)="deleteInfividualQuestion(selectedFaq)">Delete</button>
+      <button class="kr-sg-button-ghost float-right text-danger" (click)="deleteInfividualQuestion(selectedFaq)">Delete</button>
   </div>
 </ng-container>
 </kr-modal>
