--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
-<div [hidden]="false">
+ <!-- <div [hidden]="true"> -->
     <app-insights [data] = "'insights'"></app-insights>
-</div>
+<!-- </div>  -->
