--- a/findly-builder/src/app/components/insights/insights.component.scss
+++ b/findly-builder/src/app/components/insights/insights.component.scss
@@ -87,6 +87,91 @@
         color: #0D6EFD;
         border-bottom: 1px solid #0D6EFD;
     }
+    .accordion-ins-head{
+        border: 0;
+        border-radius: 0;
+        //padding-left: 37px;
+        background-color: #FFFFFF;
+        border-top: 1px solid #DDDDDD;
+        margin: -2px 5%;
+        //border-bottom: 1px solid #DDDDDD;
+        a{
+            text-decoration: none;
+            color: #161928;
+        }
+        .action-header{
+            position: relative;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 20px;
+            color: #161928;
+            
+            .status{
+                position: relative;
+                margin-left: 8px;
+                background: #E7F1FF;
+                border-radius: 2px;
+                padding: 3px 6px;
+            }
+            
+        }
+        .pl-pr-0{
+            padding-right: 0px;
+            padding-left: 0px;
+        }
+        .time{
+            position: relative;
+            
+        }
+        .span-act{
+            font-weight: 600;
+        }
+        .mr-0{
+            margin-right: 0px
+        }
+        .action-desc{
+            position: relative;
+            font-weight: normal;
+            font-size: 10px;
+            line-height: 12px;
+            color: #979797;
+            margin-left: 20px;
+        }
+    }   
+    .accordion-ins {
+        background-color: transparent !important;
+        color: #161928;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 14px;
+        transition: 0.4s;
+        cursor: pointer !important;
+        position: relative;
+        position: relative;
+        padding: 0px 0 0 20px;
+        margin-bottom: 15px;
+        .card {
+            border-top: 1px solid #DDDDDD;
+            border-bottom: 1px solid #DDDDDD;
+            box-shadow: inset 0px -0.5px 0px #DDDDDD;
+            height: 50px;
+            .card-header {
+                border: 0;
+                border-radius: 0;
+                padding: .75rem 1.25rem;
+                background-color: #FFFFFF
+                /* padding: 0; */
+                a{
+                    text-decoration: none;
+                    color: #161928;
+                }
+            }
+        }
+    }
     
 }
 .adv-opt-mode{
@@ -95,7 +180,7 @@
     top: 68px;
     z-index: 1000;
     height: 100%;
-    margin-left: 38%;
+    //margin-left: 38%;
     width: calc(100% - 60%);
     box-shadow: -3px 0px 30px rgba(18, 61, 101, 0.2), inset -2px -4px 80px rgba(255, 255, 255, 0.18) !important;
     background: #FFFFFF;
@@ -125,3 +210,4 @@
     text-transform: uppercase;
     color: #0D6EFD;
 }
+
