--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -171,3 +171,11 @@ img.logo-img{
     display: none !important;
   }
   
+
+  .search-container-adv{
+    /* transition: 1s; */
+    left: 63px !important;
+    left: -845px !important;
+    right: 0 !important; 
+    width: calc(55% - 245px);
+  }
