--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -136,16 +136,16 @@
               <div class="col_ col-2">
                 <span *ngIf="source.recentStatus && statusObj[source.recentStatus]"
                   [ngStyle]="{color: (source.recentStatus && statusObj[source.recentStatus])?statusObj[source.recentStatus].color:'#202124'}">{{statusObj[source.recentStatus].name}}<img
-                    src="assets/icons/failed-status.svg" class="ml-2"
+                    src="assets/icons/failed-status.svg" class="ml-2" placement="top" ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:''}}" container="body"
                     *ngIf="statusObj[source.recentStatus].name == 'Failed'"><img src="assets/icons/ringLoading.svg"
-                    class="ml-2 inProgress" *ngIf="statusObj[source.recentStatus].name == 'In Progress'"></span>
+                    class="ml-2 inProgress" *ngIf="statusObj[source.recentStatus].name == 'In Progress'" placement="top" container='body' ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:statusObj[source.recentStatus].name}}"></span>
                 <span *ngIf="!(source.recentStatus && statusObj[source.recentStatus])">---</span>
               </div>
               <div class="col_ col-3">{{source.createdOn | dateFormatPipe: 'MM-DD-YYYY hh:mm A' }}</div>
               <div class="col_ col-1 text-right p-0">
                 <span class="actions-links d-none"><img class="action_icon" src="assets/icons/refresh-table.svg"></span>
                 <span class="actions-links" (click)="deletePages('source',source,$event)"><img class="action_icon"
-                    src="assets/icons/delete-table.svg" ngbTooltip='delete' container="body"></span>
+                    src="assets/icons/delete-table.svg" ngbTooltip='Delete' container="body"></span>
               </div>
             </div>
           </ng-container>
@@ -168,10 +168,10 @@
                     <div class="status-info"
                       *ngIf="source.recentStatus && statusObj[source.recentStatus] && (source.recentStatus !== 'success') "
                       [ngStyle]="{color: (source.recentStatus && statusObj[source.recentStatus])?statusObj[source.recentStatus].color:'#202124'}">
-                      <img src="assets/icons/failed-status.svg" *ngIf="statusObj[source.recentStatus].name == 'Failed'">
+                      <img src="assets/icons/failed-status.svg" *ngIf="statusObj[source.recentStatus].name == 'Failed'" placement="top" ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:''}}" container="body">
                       <img class="inprogressLoader" src="assets/icons/ringLoading.svg"
-                        *ngIf="statusObj[source.recentStatus].name == 'In Progress'">
-                      <div class="status-name" *ngIf="statusObj[source.recentStatus].name !== 'Success'">
+                        *ngIf="statusObj[source.recentStatus].name == 'In Progress'" placement="top" container='body' ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:statusObj[source.recentStatus].name}}">
+                      <div class="status-name" *ngIf="statusObj[source.recentStatus].name !== 'Success'" >
                         {{statusObj[source.recentStatus].name}}</div>
                     </div>
                     <div *ngIf="!(source.recentStatus && statusObj[source.recentStatus])">---</div>
@@ -181,7 +181,7 @@
                   <div class="actions-delete">
                     <span class="actions-links d-none"><img class="action_icon" ngbTooltip='Refresh'
                         src="assets/icons/sidemenu/table-refresh.svg"></span>
-                    <span class="actions-links" (click)="deletePages('source',source,$event)" ngbTooltip='delete'><img
+                    <span class="actions-links" (click)="deletePages('source',source,$event)" ngbTooltip='Delete'><img
                         class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
                   </div>
                 </div>
